Added update profile route

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^3.6.0",
     "@nextui-org/avatar": "^2.0.30",
     "@nextui-org/react": "^2.4.2",
+    "@nextui-org/tooltip": "^2.0.36",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -36,7 +37,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@remixicon/react": "^4.2.0",
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-table": "^8.17.3",
