--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 /worker/node_modules/
 node_modules/
 
+lambda/
+videos/
+wasp-app/
+demoreact/
 /test/
 # Ignore build artifacts and distribution directories
 /build/
