--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/s3-request-presigner": "^3.600.0",
     "@upstash/redis": "^1.31.5",
     "aws-sdk": "^2.1643.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
