--- a/proxy_server/proxyworker/wrangler.toml
+++ b/proxy_server/proxyworker/wrangler.toml
@@ -4,6 +4,18 @@ main = "src/index.js"
 compatibility_date = "2023-12-01"
 compatibility_flags = ["nodejs_compat"]
 
+[[r2_buckets]]
+binding = 'MY_BUCKET'
+bucket_name = 'video-transcoder'
+
+[[services]]
+binding = "ANALYTICS_WORKER"
+service = "analytics-worker"
+
+#services = [
+# { binding = "ANALYTICS_WORKER", service = "analytics-worker",  environment = "production" }
+# ]
+
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
 # rather than the end user may result in better performance.
@@ -16,8 +28,8 @@ compatibility_flags = ["nodejs_compat"]
 # - https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 # Note: Use secrets to store sensitive data.
 # - https://developers.cloudflare.com/workers/configuration/secrets/
-# [vars]
-# MY_VARIABLE = "production_value"
+[vars]
+CDN_URL = "https://cdn.streamscale.aksdev.me"
 
 # Bind the Workers AI model catalog. Run machine learning models, powered by serverless GPUs, on Cloudflare’s global network
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#workers-ai
